# Engram

./: .env.example  .gitignore  AGENTS.md  README.md  pack_for_audit.py  progress.md  pyproject.toml  requirements.txt  start.bat  tmp_verify_preview_rename.py
V0.99/: Font.c  SIMULATOR_AD_VALUE.TXT  Video Overlay.mcp  Video Overlay.mcw  Video Overlay.mcw.default  Video Overlay.mptags  Video Overlay.plt  VideoOverlay.c  VideoOverlay.h  VideoSync.SCL  char_buffer.c  char_buffer.h  clean.bat  flash.c  flash.h  font.h  font_8x12.c  font_8x8 Home-made.c  get_trap_address.h  get_trap_address.s  global.c  global.h  init.c  init.h  maint_terminal.c  maint_terminal.h  menu.c  menu.h  p33FJ64GP204.h  p33Fxxxx.h  pos.c  pos.h  pos_esc.c  pos_esc.h  reset.s  splash_screen.c  splash_screen.h  status_line.c  status_line.h  stimwb.sbs  (+15 more)
app/: coordinator.py  lifecycle.py  main.py  run_modes.py
config/: defaults.py  settings.py
docs/: code-intelligence-handoff.md  engineering-landmines.md
indexing/: chunker.py  clang_extractor.py  clang_worker.py  embedder.py  embedding_providers.py  embeddings.py  graph_builder.py  native_build_context.py  parser_registry.py  planner.py  process_builder.py  scanner.py  symbol_extractor.py  tree_cache.py
mcp_server/: formatters.py  git_change_cache.py  mcp_session.py  project_resolution.py  resolvers.py  schema.py  server.py  tool_handlers.py  tools.py
models/: config_models.py  entity_models.py  review_models.py  stage_models.py  tool_models.py
outputs/: galaxy.html
reviewers/: aggregator.py  base.py  context.py  execution.py  providers.py  (+5 more)
(+133 files in other folders)
