[project]
name = "coder"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1,<2.0",
    "kuzu>=0.8,<1.0",
    "lancedb>=0.20,<1.0",
    "mcp>=1.9,<2.0",
    "openai>=1.50,<2.0",
    "sentence-transformers>=3.0,<4.0",
    "transformers==4.52.4",
    "tree-sitter>=0.23,<1.0",
    "tree-sitter-language-pack>=0.4,<1.0",
    "libclang>=16.0,<20.0",
    "watchdog>=5.0,<6.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app", "config", "indexing", "mcp_server", "models", "services", "storage", "scripts"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
